--- a/Stage/menu.css
+++ b/Stage/menu.css
@@ -1,16 +1,25 @@
-body{
-    background-color: black;
-}
 nav{
     text-align: center;
-    background-color: antiquewhite;
-    border: 3px solid red;
+    background-color: rgb(117, 8, 8);
+    border: 3px solid rgb(71, 3, 3);
     border-radius: 50px;
     text-align: center;
 }
-li{ 
-    background-color: rgb(82, 230, 102);
+
+li{
     display: inline;
-    border: 3px solid rgb(10, 107, 23);
     border-radius: 50px;
+    margin: 2%;
+    font-size: xx-large;
+}
+
+li:hover{
+    background-color: rgb(71, 3, 3);
+    padding: 1%;
+}
+
+a{
+    font-weight: bolder;
+    text-decoration: none;
+    color: aliceblue;
 }
