--- a/Stage/menu.css
+++ b/Stage/menu.css
@@ -13,7 +13,8 @@ li{
     font-size: xx-large;
 }
 
-li:hover{
+a:hover{
+    border-radius: 50px;
     background-color: rgb(71, 3, 3);
     padding: 1%;
 }
@@ -22,4 +23,10 @@ a{
     font-weight: bolder;
     text-decoration: none;
     color: aliceblue;
+}
+
+/*Image*/
+.menu img{
+    width: 4%;
+    border-radius: 100%;
 }
