--- a/Stage/menu.css
+++ b/Stage/menu.css
@@ -15,20 +15,21 @@ header{
     border-radius: 50px;
     margin: 2%;
     font-size: xx-large;
+    margin: auto;
 }
 
 .menu a{
     font-weight: bolder;
     text-decoration: none;
     color : #181717;
-    padding: 1%;
+    padding: 2%;
 }
 
 .menu a:hover{
     background-color: #181717;
     color: #F6F1F1;
     border-radius: 40px 40px 0px 0px;
-    padding: 1%;
+    padding: 2%;
 }
 
 /*Image*/
@@ -40,11 +41,10 @@ header{
 .gauche img{
     width: 4%;
     position:  absolute;
-    left : 10px;
-    margin: auto;
-    text-align: left;
+    left : 40px;
 }
 
 .droite img{
     width: 4%;
+    margin: 0% 2% 0% 1%;
 }
