--- a/Stage/css/menu.css
+++ b/Stage/css/menu.css
@@ -5,50 +5,49 @@ header{
     position: absolute;
     /*position: fixed;*/
     background-color:  #F6F1F1;
-    padding: 3%;
+    padding: 2%;
     text-align: right;
 }
 
-.menu ul{
-    display: inline;
+.options-container ul{
     margin: 0 auto;
 }
 
-.menu li{
-    display: inline;
-    font-size: 110%;
+.options-container li{
+    display: inline-flex;
+    font-size: 120%;
+    padding: 2%;
+    border: 2px solid gray;
 }
 
-.menu a{
-    font-weight: bolder;
-    text-decoration: none;
-    color : #181717;
-    padding: 1% 4% 4% 4%;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.menu a:hover{
+.options-container a{
     background-color: #181717;
     color: #F6F1F1;
     border-radius: 40px 40px 0px 0px;
-    padding: 1% 4% 4% 4%;
+    font-weight: bolder;
+    text-decoration: none;
+    /*color : #181717;*/
+    text-align: center;
+    margin: 0 auto;
+    border: 2px solid red;
 }
 
-.compte{
-    margin-right: 3%;
+.options-container a:hover{
+    background-color: #181717;
+    color: #F6F1F1;
+    border-radius: 40px 40px 0px 0px;
 }
 
 /*Image*/
 
-.menu img{
+.options-container img{
     border-radius: 100%;
 }
 
 .gauche img{
     display: flex;
     position: absolute;
-    top: 0;
+    top: 25%;
     left:0;
     width: 5%;
     margin: 1%;
@@ -57,16 +56,23 @@ header{
 .droite img{
     display: flex;
     position: absolute;
-    top: 0;
-    right:0;
+    top: 25%;
+    right: 0;
     width: 5%;
     margin: 1%;
+}
+
+.wrapper{
+    opacity: 0;
 }
 
 /*Test Mobile*/
 
 @media only screen and (max-width: 760px)
 {
+    .wrapper{
+        opacity: 100%;
+    }
     .burger {
         background-color: #181717;
         margin-top: 35px;
