--- a/Stage/css/styles.css
+++ b/Stage/css/styles.css
@@ -31,10 +31,6 @@ p{
     text-align: justify;
 }
 
-.date{
-    font-style: italic;
-}
-
 /*Article principal*/
 
 .article_principal h2{
@@ -42,7 +38,7 @@ p{
 }
 
 .article_principal{
-    width: 60%;
+    width: 80%;
     display: flex;
     margin: 2% auto;
     border: solid #F6F1F1;
@@ -58,7 +54,6 @@ p{
     margin: 5%;
     border-radius: 40px 40px 40px 40px;
     width: 25%;
-    height: 100%;
 }
 
 /*Article principal : Boutton*/
@@ -120,11 +115,33 @@ footer{
 }
 
 /*Test Mobile*/
-
-
-@media only screen and (max-width: 760px)
+@media only screen and (max-width: 1000px)
 {
-    main{
-        margin-top: 22%;
+    .article_principal h2{
+        font-size: 20px;
+    }
+    h3{
+        font-size: small;
+    }
+    p{
+        font-size: x-small;
+    }
+    @media only screen and (max-width: 760px)
+    {
+        main{
+            margin-top: 22%;
+        }
+        @media only screen and (max-width: 500px)
+        {
+            .article_principal h2{
+                font-size: 10px;
+            }
+            h3{
+                font-size: x-small;
+            }
+            p{
+                font-size: xx-small;
+            }
+        }
     }
 }
