--- a/Stage/css/styles.css
+++ b/Stage/css/styles.css
@@ -1,11 +1,17 @@
 /*Général*/
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: #181717;
 }
 
 main{
     margin-top: 10%;
+    margin-bottom: 5%;
 }
 
 h1{
@@ -51,7 +57,7 @@ p{
 }
 
 .article_principal img{
-    margin: 5%;
+    margin: 4%;
     border-radius: 40px 40px 40px 40px;
     width: 25%;
 }
@@ -62,20 +68,21 @@ p{
     font-weight: bolder;
     background-color: #181717;
     color: #F6F1F1;
-    padding: 2% 10%;
+    padding: 1% 10%;
     border-radius: 40px;
+    font-size: small;
 }
 
 .article_principal button:hover{
     font-weight: bolder;
     background-color: #F6F1F1;
     color:#181717;
-    padding: 2% 10%;
+    padding: 1% 10%;
     border-radius: 40px;
 }
 
 .articlePrincipal{
-    padding: 5%;
+    padding: 4%;
 }
 
 /*Article secondaire*/
@@ -83,9 +90,11 @@ p{
 .texte_article h3{
     text-align: center;
     color: #F6F1F1;
+    font-size: x-large;
 }
 
 .texte_article p{
+    font-size: medium;
     margin: auto 5%;
     color: #F6F1F1;
     text-align: justify;
@@ -106,12 +115,13 @@ p{
 /*footer*/
 
 footer{
-    padding: 10px;
-    left: 0;
-    right: 0;
-    position: absolute;
-    /*position: fixed;*/
+    display: block;
+    position: relative;
+    bottom: 0;
+    padding: 0.5%;
     background-color:  #F6F1F1;
+    font-style: italic;
+    font-size: small;
 }
 
 /*Test Mobile*/
@@ -120,27 +130,116 @@ footer{
     .article_principal h2{
         font-size: 20px;
     }
+
     h3{
         font-size: small;
     }
+
     p{
         font-size: x-small;
     }
+
     @media only screen and (max-width: 760px)
     {
+        .article_principal h2{
+            font-size: 16px;
+        }
+
         main{
             margin-top: 22%;
         }
+
+        .articlePrincipal{
+            padding: 2%;
+        }
+
+        .article_principal button{
+            font-weight: bolder;
+            background-color: #181717;
+            color: #F6F1F1;
+            padding: 1% 5%;
+            border-radius: 40px;
+            font-size: x-small;
+        }
+        
+        .article_principal button:hover{
+            font-weight: bolder;
+            background-color: #F6F1F1;
+            color:#181717;
+            padding: 1% 5%;
+            border-radius: 40px;
+        }
+
         @media only screen and (max-width: 500px)
         {
             .article_principal h2{
                 font-size: 10px;
             }
+
             h3{
                 font-size: x-small;
             }
+
             p{
                 font-size: xx-small;
+            }
+
+            .articlePrincipal{
+                padding: 1%;
+            }
+            
+            .article_principal button{
+                font-weight: bolder;
+                background-color: #181717;
+                color: #F6F1F1;
+                padding: 0 5%;
+                border-radius: 40px;
+                font-size: 5px;
+            }
+            
+            .article_principal button:hover{
+                font-weight: bold;
+                background-color: #F6F1F1;
+                color:#181717;
+                padding: 0 5%;
+                border-radius: 40px;
+            }
+
+            .bouton_index{
+                font-size: xx-small;
+            }
+
+            @media only screen and (max-width: 380px)
+            {
+            .article_principal h2{
+                font-size: 8px;
+            }
+
+            h3{
+                font-size: 7px;
+            }
+
+            p{
+                font-size: 5px;
+                margin-bottom: 0;
+            }
+
+            .article_principal button{
+                font-weight: bolder;
+                background-color: #181717;
+                color: #F6F1F1;
+                padding: 0 5%;
+                border-radius: 40px;
+                font-size: 4px;
+            }
+            
+            .article_principal button:hover{
+                font-weight: bold;
+                background-color: #F6F1F1;
+                color:#181717;
+                padding: 0 5%;
+                border-radius: 40px;
+            }
             }
         }
     }
