--- a/Stage/css/compte.css
+++ b/Stage/css/compte.css
@@ -1,11 +1,22 @@
 
 /* Bordered form */
 form {
-    width:50%;
-    margin: auto;
+    width:60%;
+    margin: 20% auto;
     padding: 30px;
     background: #F6F1F1;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border-radius: 40px;
+}
+
+#formCompte{
+    margin-bottom: 0%;
+    border-radius: 40px 40px 0 0;
+}
+
+#formCompte2{
+    margin-top: 0%;
+    border-radius: 0 0 40px 40px;
 }
 
 h2{
@@ -13,12 +24,40 @@ h2{
     text-align: center;
 }
 
+h3{
+    text-align: center;
+}
+
+label{
+    display: block;
+    text-align: center;
+}
+
+input{
+    width: 80%;
+    padding: 1%;
+    margin: 2% auto;
+    display: block;
+    text-align: center;
+    border-radius: 40px;
+}
+
+input:hover{
+    background-color: #181717;
+    color: #F6F1F1;
+    border-radius: 40px;
+}
+
+#image_User:hover{
+    background-color: #F6F1F1;
+    color: #181717;
+}
 
 input[type=submit] {
-    width: 100%;
-    margin: auto;
+    width: 80%;
+    margin: 2% auto;
     color: #181717;
-    padding: 14px;
+    padding: 1%;
     cursor: pointer;
     border:  2px solid #181717;  
     border-radius: 40px;
@@ -26,14 +65,36 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    width: 100%;
-    margin: auto;
-    background-color: F6F1F1;
-    color: #53af57;
-    border: 2px solid #53af57;
+    width: 80%;
+    margin: 2% auto;
+    background-color: #181717;
+    color: #F6F1F1;
+    border: 2px solid;
     border-radius: 40px;
 }
 
 fieldset{
     border: none;
+}
+
+input[type="file"] {
+    font-size: medium;
+    border: 2px solid #181717;
+    width: 80%;
+    vertical-align: middle;
+}
+
+input[type="file"]::-webkit-file-upload-button {
+    background: #181717;  
+    color: #F6F1F1;
+    margin: auto;
+    border: none;
+    float: right;
+    outline: 15px solid #181717;
+    
+}
+
+input[type="file"]::-webkit-file-upload-button:hover {
+    opacity: 70%;
+    cursor: pointer;
 }
