--- a/Stage/css/compte.css
+++ b/Stage/css/compte.css
@@ -1,5 +1,10 @@
 
 /* Form */
+
+#corps{
+    --bs-body-bg: #181717;
+}
+
 form {
     width:60%;
     margin: 20% auto;
@@ -40,7 +45,7 @@ fieldset{
 /*Input*/
 
 input{
-    width: 70%;
+    width: 100%;
     padding-top: 1%;
     padding-bottom: 1%;
     margin: 2% auto;
@@ -61,7 +66,7 @@ input:hover{
 }
 
 input[type=submit] {
-    width: 70%;
+    width: 100%;
     margin: 5% auto 10%;
     color: #181717;
     padding: 1%;
@@ -72,7 +77,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    width: 70%;
+    width: 100%;
     margin: 5% auto 10%;
     background-color: #181717;
     color: #F6F1F1;
@@ -83,7 +88,7 @@ input[type=submit]:hover {
 input[type="file"] {
     font-size: medium;
     border: 2px solid #181717;
-    width: 70%;
+    width: 100%;
     vertical-align: middle;
 }
 
