--- a/Stage/css/styles.css
+++ b/Stage/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: #181717;
+    background-color: #181717 !important;
 }
 
 main{
@@ -118,7 +118,7 @@ footer{
     display: block;
     position: relative;
     bottom: 0;
-    padding: 0.5%;
+    
     background-color:  #F6F1F1;
     font-style: italic;
     font-size: small;
