Rendu final jour 2 S2

--- a/Stage/css/compte.css
+++ b/Stage/css/compte.css
@@ -1,5 +1,6 @@
 
-/* Bordered form */
+/* Form */
+
 form {
     width:60%;
     margin: 20% auto;
@@ -33,9 +34,16 @@ label{
     text-align: center;
 }
 
+fieldset{
+    border: none;
+}
+
+/*Input*/
+
 input{
-    width: 80%;
-    padding: 1%;
+    width: 100%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     margin: 2% auto;
     display: block;
     text-align: center;
@@ -54,8 +62,8 @@ input:hover{
 }
 
 input[type=submit] {
-    width: 80%;
-    margin: 2% auto;
+    width: 100%;
+    margin: 5% auto 10%;
     color: #181717;
     padding: 1%;
     cursor: pointer;
@@ -65,22 +73,18 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    width: 80%;
-    margin: 2% auto;
+    width: 100%;
+    margin: 5% auto 10%;
     background-color: #181717;
     color: #F6F1F1;
     border: 2px solid;
     border-radius: 40px;
 }
 
-fieldset{
-    border: none;
-}
-
 input[type="file"] {
     font-size: medium;
     border: 2px solid #181717;
-    width: 80%;
+    width: 100%;
     vertical-align: middle;
 }
 
@@ -97,4 +101,106 @@ input[type="file"]::-webkit-file-upload-button {
 input[type="file"]::-webkit-file-upload-button:hover {
     opacity: 70%;
     cursor: pointer;
+}
+
+/*Test Mobile Accueil connexion/inscription*/
+
+@media only screen and (max-width: 950px)
+{
+    form {
+        margin: 40% auto;
+    }
+
+    .titreForm{
+        font-size: large;
+    }
+
+    @media only screen and (max-width: 650px)
+    {
+        form {
+            margin: 50% auto;
+        }
+
+        @media only screen and (max-width: 570px)
+        {
+            form {
+                margin: 80% auto;
+            }
+
+            .titreForm{
+                font-size: small;
+            }
+
+            @media only screen and (max-width: 410px)
+            {
+                form {
+                    margin: 100% auto;
+                }
+    
+                .titreForm{
+                    font-size: x-small;
+                }
+                @media only screen and (max-width: 312px)
+                {
+                    form {
+                        margin: 90% auto;
+                    }
+        
+                    .titreForm{
+                        font-size: xx-small;
+                    }
+
+                    h2{
+                        font-size: large;
+                    }
+                
+                    h3{
+                        font-size:medium;
+                    }
+                
+                    label{
+                        font-size:small;
+                    }
+                
+                    fieldset{
+                        border: none;
+                    }
+                
+                    /*Input*/
+                
+                    input{
+                        font-size: xx-small;
+                    }
+
+                    input:hover{
+                        font-size: xx-small;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/*Test Mobile Informations*/
+
+@media only screen and (max-width: 700px)
+{
+    input[type="file"] {
+        font-size: x-small;
+
+    }
+    
+    input[type="file"]::-webkit-file-upload-button {
+        outline: 5px solid #181717;
+    }
+
+    #titreInfos{
+        font-size: large;
+        margin: auto;
+    }
+
+    h3{
+        font-size:x-small;
+        margin: 4% auto;
+    }
 }
