--- a/Stage/test.css
+++ b/Stage/test.css
@@ -1,17 +1,11 @@
-#button2 .svg-button {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
+#button2 a{
+    text-decoration: none;
+    margin: 10%;
 }
 
 #button2{
-    margin: 4%;
+    margin: 5%;
     text-align: center;
-}
-
-.arrow-svg, .arrow2-svg{
-    cursor: pointer;
 }
 
 svg{
