--- a/Stage/test/test.css
+++ b/Stage/test/test.css
@@ -1,4 +1,4 @@
-
+/*
 th{
     text-align: center !important;
 }
@@ -59,4 +59,4 @@ div svg:hover .arrow2{
         opacity: 1;
         transform: translateX(1rem);
    }
-}
+}*/
