--- a/Stage/css/user.css
+++ b/Stage/css/user.css
@@ -10,6 +10,7 @@ h2{
 p{
     margin: auto;
     padding: 10px;
+    height: 50px;
     background-color: #F6F1F1;
     color: #181717;
     width: 500px;
@@ -28,7 +29,7 @@ img{
 
 /*Bouton utilisateur*/
 
-#button a{
+#button3 a{
     text-decoration: none;
     border: 5px dotted #F6F1F1;
     color: #F6F1F1;
@@ -36,15 +37,15 @@ img{
     padding: 20px;
 }
 
-#button{
+#button3{
     text-align: center;
 }
 
-#button a:hover{
+#button3 a:hover{
     border: none;
 }
 
-#button a:hover {
+#button3 a:hover {
     animation: arrow-anim 2.5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
 }
 
