--- a/Stage/test/test2.css
+++ b/Stage/test/test2.css
@@ -1,4 +1,4 @@
-svg{
+/*svg{
     overflow: visible;
 }
 
@@ -128,7 +128,7 @@ input[type="submit"] {
     transition: all 200ms;
     cursor: pointer;
 }
-input[type="submit"]:focus {
+input[type="submit"]:hover {
     background: transparent;
     color: transparent;
     border: none;
@@ -138,4 +138,285 @@ input[type="submit"]:focus {
 }
 @keyframes spin {
     to {transform: rotate(360deg);}
+}*/
+/*
+
+@-webkit-keyframes extend {
+    0% {
+        width: 600px;
+        height: 200px;
+        border-radius: 100px;
+        } 10% {
+        width: 610px;
+        height: 210px;
+        background: #fff;
+        margin-left: - 5px;
+        margin-top: - 5px;
+        } 20% {
+        width: 600px;
+        height: 200px;
+        background: #6fb07f;
+        margin-left: 0px;
+        margin-top: 0px;
+        } 100% {
+        width: 200px;
+        height: 200px;
+        border-radius: 100px;
+        margin-left: 190px;
+        background: #6fb07f;
+        }
+    }
+@keyframes extend {
+    0% {
+        width: 600px;
+        height: 200px;
+        border-radius: 100px;
+        } 10% {
+        width: 610px;
+        height: 210px;
+        background: #fff;
+        margin-left: - 5px;
+        margin-top: - 5px;
+        } 20% {
+        width: 600px;
+        height: 200px;
+        background: #6fb07f;
+        margin-left: 0px;
+        margin-top: 0px;
+        } 100% {
+        width: 200px;
+        height: 200px;
+        border-radius: 100px;
+        margin-left: 190px;
+        background: #6fb07f;
+        }
+    }
+
+@-webkit-keyframes disappear {
+    0% {
+        opacity: 1;
+        } 20% {
+        color: #fff;
+        } 100% {
+        opacity: 0;
+        }
+    }
+@keyframes disappear {
+    0% {
+        opacity: 1;
+        } 20% {
+        color: #fff;
+        } 100% {
+        opacity: 0;
+        }
+    }
+
+@-webkit-keyframes appear {
+    0% {
+        opacity: 0;
+        } 70% {
+        opacity: 0;
+        } 100% {
+        opacity: 1;
+        }
+    }
+@keyframes appear {
+    0% {
+        opacity: 0;
+        } 70% {
+        opacity: 0;
+        } 100% {
+        opacity: 1;
+        }
+    }
+html {
+    background: #fff
+    }
+
+input, button, submit {
+    border: none
+    }
+
+.cont {
+    position: absolute;
+    width: 610px;
+    height: 10px;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -300px
+    }
+
+button {
+    border-width: 1px;
+    width: 600px;
+    height: 200px;
+    border-radius
+    border-radius: 100px;
+    background: #fff;
+    position: absolute;
+    border: 5px solid #6fb07f
+    }
+
+button > span {
+    font-size: 48px;
+    color: #6fb07f
+    }
+
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0
+    }
+
+button:focus {
+    animation
+    -webkit-animation: extend 1s ease-in-out;
+    -ms-animation: extend 1s ease-in-out;
+    animation: extend 1s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+     Chrome, Safari, Opera 
+    animation-fill-mode: forwards
+    }
+
+button:focus > span {
+    -webkit-animation: disappear 1s ease-in-out;
+    -ms-animation: disappear 1s ease-in-out;
+    animation: disappear 1s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+
+    animation-fill-mode: forwards
+    }
+
+button:focus > img {
+
+    -webkit-animation: appear 1s ease-in-out;
+    -ms-animation: appear 1s ease-in-out;
+    animation: appear 1s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+
+    animation-fill-mode: forwards
+    }
+*/
+
+#button{
+    background-color: #F6F1F1;
+}
+svg{
+    display: flex;
+    overflow: visible;
+}
+svg:hover{
+    border: none;
+}
+
+div svg:hover .check{
+    animation: check-anim 5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
+}
+
+div svg:hover .checkNode{
+    animation: checkNode-anim 5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
+    display:unset;
+}
+
+.checkNode{
+    display: none;
+}
+
+@keyframes check-anim {
+    0% {
+        opacity: 1;
+    }
+    10% {
+        opacity: 0.9;
+    }
+    20% {
+        opacity: 0.8;
+    }
+    30% {
+        opacity: 0.7;
+    }
+    40% {
+        opacity: 0.6;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    60% {
+        opacity: 0.3;
+    }
+    70% {
+        opacity: 0.1;
+    }
+    80%{
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes checkNode-anim {
+    0% {
+        opacity: 0;
+    }
+    70% {
+        opacity: 0;
+    }
+    80% {
+        font-size: 25px;
+    }
+    81% {
+        font-size: 26px;
+    }
+    82% {
+        font-size: 27px;
+    }
+    83% {
+        font-size: 28px;
+    }
+    84% {
+        font-size: 29px;
+    }
+    85% {
+        font-size: 30px;
+    }
+    86% {
+        font-size: 31px;
+    }
+    87% {
+        font-size: 32px;
+    }
+    88% {
+        font-size: 33px;
+    }
+    89% {
+        font-size: 34px;
+    }
+    90% {
+        font-size: 35px;
+    }
+    91% {
+        font-size: 36px;
+    }
+    92% {
+        font-size: 37px;
+    }
+    93% {
+        font-size: 38px;
+    }
+    94% {
+        font-size: 39px;
+    }
+    95% {
+        font-size: 40px;
+    }
+    100% {
+        font-size: 40px;
+    }
 }
