--- a/Stage/css/admin.css
+++ b/Stage/css/admin.css
@@ -91,6 +91,16 @@ td{
        .TableResponsive td{
            width: 300px;
        }
+       /*button*/
+
+       svg{
+        width: 50px;
+        height: 50px;
+       }
+/*
+       .arrow, .arrow2{
+        stroke-width: 1;
+       }*/
 
        @media only screen  and (max-width:300px){
            .TableResponsive td{
@@ -101,16 +111,18 @@ td{
 
 }
 
+/*button*/
+
 th{
     text-align: center !important;
 }
 
-#button2 a{
+.button2 a{
     text-decoration: none;
     margin: 10%;
 }
 
-#button2{
+.button2{
     margin: 5%;
     text-align: center;
 }
