--- a/Stage/css/submit.css
+++ b/Stage/css/submit.css
@@ -99,3 +99,18 @@ svg:hover .checkNode{
         opacity: 0;
     }
 }
+
+@media only screen and (max-width: 500px) {
+    svg{
+        width: 100%;
+        height: 70px;
+    }
+    text{
+        font-size: 20px;
+    }
+    @media only screen and (max-width: 300px) {
+        text{
+            font-size: 15px;
+        }
+    }
+}
