--- a/Stage/css/user.css
+++ b/Stage/css/user.css
@@ -5,7 +5,6 @@ h2{
     margin: auto;
     padding: 10px;
     width: 500px;
-    opacity: 90%;
 }
 p{
     margin: auto;
@@ -18,7 +17,7 @@ p{
 }
 
 .user{
-    margin: 100px;
+    margin: 50px;
     text-align: center;
 }
 
@@ -116,20 +115,66 @@ img{
         height: 40px !important;
         width: 300px !important;
     }
-    @media only screen and (max-width:300px)
+    @media only screen and (max-width:500px)
     {
-        img{
-            width: 125px;
+        h1{
+            font-size: 20px !important;
         }
-        h2,h1{
-            width: 100px !important;
-            font-size: 10px !important;
+        h2{
+            width: 200px !important;
+            font-size: 15px !important;
         }
         p{
             height: 30px !important;
-            width: 100px !important;
-            font-size: 8px !important;
+            width: 200px !important;
+        }
+        @media only screen and (max-width:375px)
+        {
+            img{
+                width: 125px;
+            }
+            h1{
+                font-size: 15px !important;
+            }
+            h2{
+                width: 150px !important;
+                font-size: 10px !important;
+            }
+            p{
+                height: 30px !important;
+                width: 150px !important;
+                font-size: 10px !important;
+            }
+            @media only screen and (max-width:340px)
+            {
+                h1{
+                    font-size: 15px !important;
+                }
+                h2{
+                    width: 125px !important;
+                    font-size: 10px !important;
+                }
+                p{
+                    height: 30px !important;
+                    width: 125px !important;
+                    font-size: 8px !important;
+                }
+                @media only screen and (max-width:300px)
+                {
+                    h1{
+                        font-size: 9px !important;
+                    }
+                    h2{
+                        width: 90px !important;
+                        font-size: 8px !important;
+                    }
+                    p{
+                        height: 30px !important;
+                        width: 90px !important;
+                        font-size: 5px !important;
+                    }
+                }
+            }
         }
     }
-
 }
