--- a/Stage/css/admin.css
+++ b/Stage/css/admin.css
@@ -6,8 +6,13 @@ body{
     font-family: sans-serif;
 }
 
+header{
+    z-index: 1;
+}
+
 main{
     margin-top: 200px;
+    z-index: 0;
 }
 
 table{
