--- a/Stage/css/styles.css
+++ b/Stage/css/styles.css
@@ -33,8 +33,10 @@ h3{
 }
 
 p{
+    font: 5px system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: medium;  
     text-align: justify;
+    margin: 0 auto!important;
 }
 
 .ContainedPost{
