--- a/Stage/css/user.css
+++ b/Stage/css/user.css
@@ -1,4 +1,4 @@
-h2, p{
+h2, .p_user{
     color:#F6F1F1;
 }
 h2{
@@ -6,7 +6,7 @@ h2{
     padding: 10px;
     width: 500px;
 }
-p{
+.p_user{
     margin: auto;
     padding: 10px;
     height: 50px;
@@ -111,7 +111,7 @@ img{
     h2{
         width: 300px !important;
     }
-    p{
+    .p_user{
         height: 40px !important;
         width: 300px !important;
     }
@@ -124,7 +124,7 @@ img{
             width: 200px !important;
             font-size: 15px !important;
         }
-        p{
+        .p_user{
             height: 30px !important;
             width: 200px !important;
         }
@@ -140,7 +140,7 @@ img{
                 width: 150px !important;
                 font-size: 10px !important;
             }
-            p{
+            .p_user{
                 height: 30px !important;
                 width: 150px !important;
                 font-size: 10px !important;
@@ -154,7 +154,7 @@ img{
                     width: 125px !important;
                     font-size: 10px !important;
                 }
-                p{
+                .p_user{
                     height: 30px !important;
                     width: 125px !important;
                     font-size: 8px !important;
@@ -168,7 +168,7 @@ img{
                         width: 90px !important;
                         font-size: 8px !important;
                     }
-                    p{
+                    .p_user{
                         height: 30px !important;
                         width: 90px !important;
                         font-size: 5px !important;
