--- a/Stage/css/admin.css
+++ b/Stage/css/admin.css
@@ -60,6 +60,24 @@ tbody tr:nth-child(even){
     object-position: center;
 }
 
+.contenueAdmin{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    border: none;
+    text-align: center;
+    font-size: 12px;
+}
+
+
+i{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    border: none;
+    text-align: center;
+}
+
 #Role{
     width: 100%;
     height: 100%;
@@ -136,7 +154,6 @@ tbody tr:nth-child(even){
         padding-left: 130px;
         position: relative;
         overflow-x: auto;
-        justify-content: center;
     }
 
     .TableResponsive td::before{
